# gmaps-scrapper

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  requirements.txt
scripts/: debug_scrape.py  debug_sidebar.py  targeted_scrape.py  test_fix.py  verify_docker.sh
src/: main.py
src/application/dtos/: __init__.py  scrape_request.py
src/application/ports/: __init__.py  repository_port.py  scraper_port.py
src/application/use_cases/: __init__.py  scrape_use_case.py
src/domain/entities/: __init__.py  place.py
src/domain/value_objects/: __init__.py  coordinates.py  opening_hours.py
src/infrastructure/cli/: __init__.py  argument_parser.py
src/infrastructure/repositories/: __init__.py  json_repository.py
src/infrastructure/scraping/: __init__.py  playwright_scraper.py
src/interfaces/: cli_entrypoint.py
tests/: conftest.py  test_argument_parser.py  test_classification.py  test_dtos.py  test_json_repository.py  test_place_entity.py  test_scraper_integration.py  test_value_objects.py
