[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gmaps-scraper"
version = "1.0.0"
description = "Personal-use Google Maps scraper using Playwright and Clean Architecture"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["google-maps", "scraper", "playwright", "clean-architecture"]

dependencies = [
    "playwright>=1.44.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "pydantic[email]>=2.7.0",
]

[project.scripts]
gmaps-scraper = "src.main:run"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
